[tool.poetry]
name = "modou"
version = "0.0.1"
description = "This was this a test I will come with anothers tools"
authors = ["Modiao <diaomodou06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
